Update photo section

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,7 +39,9 @@
 
 	<!-- Scripts-->
 	<script src="{{ site.baseurl }}/js/lib/jquery-1.10.2.min.js"></script>
+	<script src="{{ site.baseurl }}/js/lib/jquery.fluidbox.min.js"></script>
 	<script src="{{ site.baseurl }}/js/scripts.js"></script>
+	
 	
 	<!--Emulates CSS3 pseudo-classes and attribute selectors in Internet Explorer 6-8-->
 	<!--[if (gte IE 6)&(lte IE 9)]>
