--- a/css/style.css
+++ b/css/style.css
@@ -455,7 +455,7 @@ iframe {
    ========================================================================== */
 
 .page-width {
-    margin: 0 auto;
+  margin: 0 auto;
 	width: 96%;
 	max-width: 52em; /* 912px+12px+12px */
 }
@@ -1256,7 +1256,7 @@ p {
 		font-size: 1em;
 		text-align: left;
 		line-height: 1.3em;
-		width: 19em;
+		width: 22em;
 	}
 }
 
@@ -1849,7 +1849,7 @@ p:target {
    
    ========================================================================== */
 
-.portfolio-list {
+.portfolio-list, .foto-list {
 	list-style: none;
 }
 
@@ -1863,11 +1863,11 @@ p:target {
 	}
 }
 
-.portfolio-item > a {
+.portfolio-item > a, .foto-item > a {
 	border-bottom: none;
 }
 
-.portfolio-item + a {
+.portfolio-item + a, .foto-item + a {
 	border-bottom: none;
 }
 
@@ -2285,6 +2285,50 @@ p:target {
 	left: -10px;
 }
 
+/* ==========================================================================
+
+   Foto page
+   
+   ========================================================================== */
+
+.page-fotografijas .site-head {
+  margin-bottom: 2em;
+}
+
+@media (min-width: 500px) {
+  .page-fotografijas .site-head {
+    margin-bottom: 2.5em;
+  }
+}
+
+@media (min-width: 600px) {
+  .page-fotografijas .site-head {
+    margin-bottom: 2.5em;
+  }
+}
+
+@media (min-width: 900px) {
+  .page-fotografijas .site-head {
+    margin-bottom: 3.5em;
+  }
+}
+
+.foto .page-width {
+  max-width: 51.222em; /* 912px+12px+12px */
+}
+
+.foto .small-6, .foto .small-12, .foto .medium-6, .foto .medium-12, .foto .large-6, .foto .large-12, .foto .xlarge-6, .foto .xlarge-12 {
+    padding-right: .2777em;
+    padding-left: .2777em;
+}
+
+.foto-list .foto-item {
+  margin-bottom: 10px;
+}
+
+.foto-item img {
+  vertical-align: bottom;
+}
 
 /* ==========================================================================
 
@@ -2435,4 +2479,121 @@ p:target {
 		position: static;
 		margin-bottom: 1.2em;
 	}
+}
+
+/* ==========================================================================
+
+   Fluidbox plugin
+   
+   ========================================================================== */
+
+@-webkit-keyframes fluidboxLoading {
+  0% {
+    -webkit-transform: translate(-50%, -50%) rotateX(0) rotateY(0);
+  }
+  50% {
+    -webkit-transform: translate(-50%, -50%) rotateX(-180deg) rotateY(0);
+  }
+  100% {
+    -webkit-transform: translate(-50%, -50%) rotateX(-180deg) rotateY(-180deg);
+  }
+}
+@keyframes fluidboxLoading {
+  0% {
+    transform: translate(-50%, -50%) rotateX(0) rotateY(0);
+  }
+  50% {
+    transform: translate(-50%, -50%) rotateX(-180deg) rotateY(0);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotateX(-180deg) rotateY(-180deg);
+  }
+}
+.fluidbox {
+  outline: none;
+  cursor: pointer;
+  cursor: -webkit-zoom-in;
+  cursor: -moz-zoom-in;
+  cursor: zoom-in;
+}
+
+.fluidbox-opened {
+  cursor: pointer;
+  cursor: -webkit-zoom-out;
+  cursor: -moz-zoom-out;
+  cursor: zoom-out;
+}
+
+.fluidbox-overlay {
+  background-color: rgba(255, 255, 255, 0.85);
+  cursor: pointer;
+  cursor: -webkit-zoom-out;
+  cursor: -moz-zoom-out;
+  cursor: zoom-out;
+  opacity: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  /* Transition time for overlay is halved to ensure that flickering doesn't happen */
+  transition: all 0.125s ease-in-out 0.125s;
+}
+
+.fluidbox-wrap {
+  background-position: center center;
+  background-size: cover;
+  margin: 0 auto;
+  position: relative;
+  transition: all 0.25s ease-in-out;
+  /* To prevent flickering, we delay the showing of the image */
+}
+.fluidbox-closed .fluidbox-wrap img {
+  transition: opacity 0s ease-in-out 0.25s;
+}
+
+.fluidbox-ghost {
+  background-size: 100% 100%;
+  background-position: center center;
+  position: absolute;
+  -webkit-transition-property: opacity, -webkit-transform;
+  -moz-transition-property: opacity, -moz-transform;
+  -o-transition-property: opacity, -o-transform;
+  transition-property: opacity, transform;
+  transition-duration: 0s, 0.25s;
+  transition-delay: 0.25s, 0s;
+}
+.fluidbox-opened .fluidbox-ghost {
+  transition-delay: 0s, 0s;
+}
+
+.fluidbox-loader {
+  perspective: 200px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+.fluidbox-loader::before {
+  -webkit-animation: fluidboxLoading 1s infinite;
+  animation: fluidboxLoading 1s infinite;
+  /* You can replace this with any color you want, or even a loading gif if desired */
+  background-color: rgba(255, 255, 255, 0.85);
+  content: '';
+  transform-style: preserve-3d;
+  transition: all 0.25s ease-in-out;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 20%;
+  padding-bottom: 20%;
+  /* Delay disapparing of loader for graceful transition */
+  transition-delay: 0.125s;
+}
+
+.fluidbox-loading .fluidbox-loader::before {
+  opacity: 1;
+  transition-delay: 0s;
 }
