--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,7 +39,7 @@
 
 	<!-- Scripts-->
 	<script src="{{ site.baseurl }}/js/lib/jquery-1.10.2.min.js"></script>
-	<script src="{{ site.baseurl }}/js/lib/jquery.fluidbox.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/fluidbox/1.4.3.1/jquery.fluidbox.min.js"></script>
 	<script src="{{ site.baseurl }}/js/scripts.js"></script>
 	
 	
