--- a/css/style.css
+++ b/css/style.css
@@ -2487,6 +2487,28 @@ p:target {
    
    ========================================================================== */
 
+@-webkit-keyframes fluidboxLoading {
+  0% {
+    -webkit-transform: translate(-50%, -50%) rotateX(0) rotateY(0);
+  }
+  50% {
+    -webkit-transform: translate(-50%, -50%) rotateX(-180deg) rotateY(0);
+  }
+  100% {
+    -webkit-transform: translate(-50%, -50%) rotateX(-180deg) rotateY(-180deg);
+  }
+}
+@keyframes fluidboxLoading {
+  0% {
+    transform: translate(-50%, -50%) rotateX(0) rotateY(0);
+  }
+  50% {
+    transform: translate(-50%, -50%) rotateX(-180deg) rotateY(0);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotateX(-180deg) rotateY(-180deg);
+  }
+}
 .fluidbox {
   outline: none;
   cursor: pointer;
@@ -2543,4 +2565,35 @@ p:target {
 }
 .fluidbox-opened .fluidbox-ghost {
   transition-delay: 0s, 0s;
+}
+
+.fluidbox-loader {
+  perspective: 200px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+.fluidbox-loader::before {
+  -webkit-animation: fluidboxLoading 1s infinite;
+  animation: fluidboxLoading 1s infinite;
+  /* You can replace this with any color you want, or even a loading gif if desired */
+  background-color: rgba(255, 255, 255, 0.85);
+  content: '';
+  transform-style: preserve-3d;
+  transition: all 0.25s ease-in-out;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 20%;
+  padding-bottom: 20%;
+  /* Delay disapparing of loader for graceful transition */
+  transition-delay: 0.125s;
+}
+
+.fluidbox-loading .fluidbox-loader::before {
+  opacity: 1;
+  transition-delay: 0s;
 }
