--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h2, .h2{
 	font-size: 1.3333em; /*24/18*/
-	line-height: 1.2;
+	line-height: 1.3;
 }
 
 @media (min-width: 600px) {
@@ -170,7 +170,61 @@ h2, .h2{
 
 h3, .h3 {
 	font-size: 1.1111em; /*20/18*/
+  line-height: 1.4;
 }
+
+.post-entry .section-heading {
+  position: relative;
+  padding: .9em 0;
+  border-top: 1px solid #c2c2c2;
+  border-bottom: 1px solid #c2c2c2;
+  margin: 2.5em 0 2em;
+  font-family: "Source Sans Pro";
+  font-weight: 300;
+  letter-spacing: 8px;
+  font-size: 1.4444em;
+  text-transform: uppercase;
+  text-align: center;
+  color: #6d6d6d;
+}
+
+
+@media (min-width: 600px) {
+  .post-entry .section-heading {
+    font-size: 1.7777em;
+    font-weight: 200;
+  }
+}
+.section-heading:before {
+  content:"";
+  display: block;
+  position: absolute;
+  width: 14px;
+  height: 14px;
+  padding: 7px;
+  top: -14px;
+  left: 50%;
+  right: 50%;
+  border-left: 14px solid #2369ca;
+  border-right: 14px solid #2369ca;
+  margin-left: -28px;
+  background: transparent;
+}
+
+.section-heading:after {
+  content:"";
+  display: block;
+  position: absolute;
+  width: 14px;
+  height: 15px;
+  top: -1px;
+  left: 50%;
+  right: 50%;
+  border-top: 1px solid #fcfcfc;
+  margin-left: -14px;
+  background: #2369ca;
+}
+
 
 
 /* Other typographical elements */
@@ -394,7 +448,7 @@ iframe {
 }
 
 .post-entry ul, .post-entry ol {
-	margin-bottom: 1.5em;
+	margin-bottom: 2em;
 }
 
 .post-entry p+ul, .post-entry p+ol {
@@ -1567,7 +1621,7 @@ p {
 }
 
 .post-entry h2 {
-	margin-bottom: .6153em;
+	margin-bottom: .7em;
 }
 
 .post-entry h3 {
@@ -1575,11 +1629,11 @@ p {
 }
 
 .post-entry p+h2 {
-	margin-top: 1.3em;
+	margin-top: 1.5em;
 }
 
 .post-entry p+h3 {
-	margin-top: 1.7em;
+	margin-top: 1.9em;
 }
 
 .post-footnotes {
@@ -1655,7 +1709,7 @@ p:target {
 
 @media (min-width: 900px) {
 	.post-entry blockquote {
-		margin: 1.7em 0 1.5em -33px;
+		margin: 1.9em 0 2em -33px;
 	}
 }
 
@@ -1686,7 +1740,7 @@ p:target {
 	.post-entry blockquote cite {
 		display: block;
 		padding: 0 0 5px 25px;
-		margin-top: -7px;
+		margin-top: -5px;
 	}
 }
 
@@ -1792,6 +1846,16 @@ p:target {
 	margin-right: 5px;
 	color: #f2b200;
 }
+
+@media (min-width: 600px) {
+  .page-20-atzinas-pec-5-nostradatiem-gadiem .post-title {
+    line-height: 1.15;
+  }
+  .page-20-atzinas-pec-5-nostradatiem-gadiem .post-title span {
+    font-size: 1.3235em;
+  }
+}
+
 
 /* ==========================================================================
 
