Create 2 site footers:narrow and wide

--- a/_includes/site-footer-narrow.html
+++ b/_includes/site-footer-narrow.html
@@ -1,7 +1,7 @@
 <footer class="post-footer">
 	<div class="page-width">
 		<div class="post-footer-content">
-			<div class="medium-10 large-6 medium-offset-2">
+			<div class="medium-10 large-6 large-offset-2">
 				<img class="post-footer-avatar" src="/img/martins-mihailovs-sm.png" alt="Mārtiņš Mihailovs avatars">
 				<h4>Par autoru</h4>
 				<p>Mans vārds ir {{ site.owner.name }}. Esmu {{ site.owner.age }} gadus vecs grafikas dizainers / web izstrādātājs no Rīgas. Mani aizrauj dizains, kods, stāsti un fotogrāfija. Mēģinu ar to aizraut arī citus. Ja Tev patīk tas, ko redzi, dod man zināt: <a href="mailto:m.mihailovs@gmail.com?Subject=Mārtiņ,%20man%20patīk%20tas,%20ko%20redzu">{{ site.owner.email }}</a></p>
