--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@
 {% include post-header.html %}
 	</div> <!-- Page width -->
     {{ content }}
-    	{% include post-footer.html %}
+    	{% include site-footer-narrow.html %}
 </article> <!-- Post -->
 
 {% include foot.html %}
