Add Liquid engine flags to style project page body class

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -68,9 +68,9 @@
 
 </head>
 {% if page.layout == "project" %}
-<body class="project project-{{ page.title | replace: '.', '-' }}">
+<body class="project project-{{ page.title | strip_html | downcase | replace: " ", "-" | replace: '.', '-' | replace: ",", "" | replace: 'ē', 'e' | replace: 'ā', 'a' | replace: 'ī', 'i' | replace: 'š', 's' | replace: 'ņ', 'n' | replace: 'ļ', 'l' }}">
 {% else if page.layout == "page" %}
-<body class="page page-{{ page.title | strip_html |downcase | replace: " ", "-" | replace: '.', '-' | replace: ",", "" | replace: 'ē', 'e' | replace: 'ā', 'a' | replace: 'ī', 'i' | replace: 'š', 's' | replace: 'ņ', 'n' | replace: 'ļ', 'l' }}">
+<body class="page page-{{ page.title | strip_html | downcase | replace: " ", "-" | replace: '.', '-' | replace: ",", "" | replace: 'ē', 'e' | replace: 'ā', 'a' | replace: 'ī', 'i' | replace: 'š', 's' | replace: 'ņ', 'n' | replace: 'ļ', 'l' }}">
 {% else %}
 <body>
 {% endif %} 
