--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ i.icon {
 body { 
 	margin: 0 auto;
 	color: #3c3c3c;
-	background-color: #fcfcfc;
+	background-color: #fff;
 	font: normal 400 18px/1.8333 Lora, Georgia, serif; /* Magic number: 1.6842105263157895em or 32; all line heights and margin bottoms have to be a multiples of 32px */
 	-moz-osx-font-smoothing: grayscale;
 	text-rendering: optimizelegibility;
@@ -101,7 +101,7 @@ body {
 
 @media (min-width: 600px) {
 	.page {
-		background: #fcfcfc url("../img/pages-bg.jpg") no-repeat bottom fixed;
+		background: #fff url("../img/pages-bg.jpg") no-repeat bottom fixed;
 	}
 }
 
