Update Foto images, add single portfilio styles, add atlas case study

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -17,6 +17,6 @@
 			</div>
 		</header>
 		{{ content }}
-			{% include site-footer-narrow.html %}
+			{% include project-footer.html %}
 	</article> <!-- Project -->
 {% include foot.html %}
