--- a/_includes/project-footer.html
+++ b/_includes/project-footer.html
@@ -1,11 +1,11 @@
 <footer class="project-footer">
 	<div class="page-width">
-		<div class="medium-10 large-8">
-			<a href="/portfolio">
-				<div class="project-footer-content">
-					<span>&larr;</span> Atpakaļ pie portfolio
-				</div> <!-- ooter content -->
-			</a>
+		<div class="project-footer-content">
+			<div class="medium-10 large-8 medium-centered">
+				<img class="project-footer-avatar" src="/img/martins-mihailovs-sm.png" alt="Mārtiņš Mihailovs avatars">
+				<h4 class="project-footer-heading">Mans vārds ir {{ site.owner.name }}</h4>
+				<p class="project-footer-desc">Esmu {{ site.owner.age }} gadus vecs grafikas dizainers / web izstrādātājs no Rīgas. Mani aizrauj dizains, kods, stāsti un fotogrāfija. Mēģinu ar to aizraut arī citus. Ja Tev patīk tas, ko redzi, dod man zināt: <a href="mailto:m.mihailovs@gmail.com?Subject=Mārtiņ,%20man%20patīk%20tas,%20ko%20redzu">{{ site.owner.email }}</a></p>
+			</div>
 		</div>
 	</div> <!-- Page width -->
 </footer>
