--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,4 +1,7 @@
-	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+	<!-- Scripts-->
+	<script src="{{ site.baseurl }}/js/lib/jquery-1.10.2.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/fluidbox/1.4.3.1/jquery.fluidbox.min.js"></script>
+	<script src="{{ site.baseurl }}/js/scripts.js"></script>
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
